--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,13 @@ name: CI
 on: [push]
 
 jobs:
+  build:
+    runs-on: ubuntu
 
- build:
- 
-  runs-on: windows
-  
-  steps:
-  
-  - name: Ver la hora
-    run: date
-  
-  - name: Esperar 3 segundos
-    run: sleep 3
+    steps:
+
+    - name: Ver la hora
+      run: date
+
+    - name: Esperar 3 segundos
+      run: sleep 3
